--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,6 +3,7 @@
 @tailwind utilities;
 
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Gloria+Hallelujah&family=New+Amsterdam&display=swap'); /* Add New Amsterdam to your import */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
 html, body {
   margin: 0;
